contents corresponds.  It overrides the behavior of 'vc-deduce-fileset'.
This replaces and generalizes the old 'vc-annotate-parent-file'.

---
*** New buffer-local variable 'vc-buffer-revision'.
This specifies the revision to which the buffer's contents corresponds.
This replaces and generalizes the old 'vc-annotate-parent-rev'.

---
*** vc-dav.el is now obsolete.

** Diff mode

+++
*** 'diff-apply-buffer' now considers the region and can reverse-apply.
If the region is active, this command now applies all hunks that the
region overlaps; otherwise, it applies all hunks.
With a prefix argument, it now reverse-applies the hunks.
This matches the existing prefix argument to 'diff-apply-hunk'.

** Package

+++
*** No longer warn if a package has no footer line.
package.el no longer warns for packages without a "footer line", which
is the line that usually appears at the very end of an Emacs Lisp file:

    ;;; FILENAME ends here

---
*** New optional argument to 'package-autoremove'.
An optional argument NOCONFIRM has been added to 'package-autoremove'.
If it is non-nil, or when invoked with a prefix argument,
'package-autoremove' will not prompt the user for confirmation before
removing packages.

---
*** New prefix argument for 'package-install-selected-packages'.
When invoked with a prefix argument, 'package-install-selected-packages'
will not prompt the user for confirmation before installing packages.

---
*** 'package-refresh-contents' runs asynchronously.
Refreshing the package index will no longer block when invoked
interactively.

---
*** 'package-upgrade' no longer accepts a string argument.
When called from Lisp, it now only accepts a symbol.

---
*** 'package-install-from-buffer' respects files marked by Dired.
When invoking the command in a Dired buffer with marked files,
the command will only copy those files.

+++
*** package-x.el is now obsolete.

** Xref

---
*** Xref commands that jump to some location use 'display-buffer'.