@@ -1458,6 +1458,7 @@ This runs the command \"hg summary\"."
          (nreverse result))
        "\n"))))
 
+;; FIXME: Resolve issue with `vc-hg-mergebase' and then delete this.
 (defun vc-hg-log-incoming (buffer remote-location)
   (vc-setup-buffer buffer)
   (vc-hg-command buffer 1 nil "incoming" "-n"
@@ -1475,11 +1476,22 @@ This runs the command \"hg summary\"."
     (and (not (string-empty-p output))
          output)))
 
+;; FIXME: Resolve issue with `vc-hg-mergebase' and then delete this.
 (defun vc-hg-log-outgoing (buffer remote-location)
   (vc-setup-buffer buffer)
   (vc-hg-command buffer 1 nil "outgoing" "-n"
                  (and (not (string-empty-p remote-location))
 		      remote-location)))
+
+;; FIXME: This works only when both rev1 and rev2 have already been pulled.
+;;        That means it can't do the work
+;;        `vc-default-log-incoming' and `vc-default-log-outgoing' need it to do.
+(defun vc-hg-mergebase (rev1 &optional rev2)
+  (or (vc-hg--run-log "{node}"
+                      (format "last(ancestors(%s) and ancestors(%s))"
+                              rev1 (or rev2 "tip"))
+                      nil)
+      (error "No common ancestor for merge base")))
 
 (defvar vc-hg-error-regexp-alist
   '(("^M \\(.+\\)" 1 nil nil 0))
